[gd_scene load_steps=8 format=3 uid="uid://dde4ge01jqy5a"]

[ext_resource type="Script" uid="uid://e43ystq41xkl" path="res://starting_menu.gd" id="1_ievhk"]
[ext_resource type="Texture2D" uid="uid://d0n5p2ri5e7v8" path="res://Button_Zombie.png" id="2_2bgwj"]
[ext_resource type="FontFile" uid="uid://dlnmeytfjcqhk" path="res://Creepster-Regular.ttf" id="3_0pu32"]
[ext_resource type="Texture2D" uid="uid://bh8mcm61qnl0o" path="res://Button_Flesh.png" id="4_mjxvy"]
[ext_resource type="Texture2D" uid="uid://c7muj60j6akpm" path="res://Button_Backbone.png" id="5_3vvgq"]
[ext_resource type="Texture2D" uid="uid://p03lwm6pakul" path="res://Gauge_Stomach_Empty.png" id="6_2bgwj"]
[ext_resource type="Texture2D" uid="uid://ddu1xvmu011fj" path="res://addons/FreeHorrorUi (1).png" id="7_0pu32"]

[node name="Starting Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 20.0
offset_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ievhk")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = 43.0
offset_right = 484.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_2bgwj")

[node name="Label" type="Label" parent="TextureRect2"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(0.73, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 111
text = "Tutorial"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.88, 0.88, 0.88, 0)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 0)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 0)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/font_disabled_color = Color(0.88, 0.88, 0.88, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 0)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0)

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -66.0
offset_right = 485.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_mjxvy")

[node name="Label2" type="Label" parent="TextureRect3"]
layout_mode = 0
offset_top = -2.0
offset_right = 640.0
offset_bottom = 124.0
theme_override_colors/font_color = Color(0.77, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 111
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -4.0
offset_right = 2.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.88, 0.88, 0.88, 0)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 0)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 0)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/font_disabled_color = Color(0.88, 0.88, 0.88, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 0)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 0)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0)

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.0
offset_top = -294.0
offset_right = 323.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3vvgq")

[node name="Label2" type="Label" parent="TextureRect4"]
layout_mode = 0
offset_left = -3.0
offset_top = 20.0
offset_right = 637.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(0.73, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 90
text = "Spooky game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 747.0
offset_top = 197.0
offset_right = 1099.0
offset_bottom = 517.0
texture = ExtResource("6_2bgwj")

[node name="Easy" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 154.0
offset_top = 77.0
offset_right = 794.0
offset_bottom = 237.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_2bgwj")

[node name="Label" type="Label" parent="TextureRect/Easy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.84, 0.32199988, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 120
text = "Easy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/Easy"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_right = -52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Normal" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 174.0
offset_top = 128.0
offset_right = 814.0
offset_bottom = 288.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_2bgwj")

[node name="Label" type="Label" parent="TextureRect/Normal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.5686275, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 120
text = "Normal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/Normal"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_right = -52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hard" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 123.0
offset_top = 219.0
offset_right = 763.0
offset_bottom = 379.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_2bgwj")
flip_h = true

[node name="Label" type="Label" parent="TextureRect/Hard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.75, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 120
text = "Hard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect/Hard"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect5" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 180.00002
offset_right = 70.0
offset_bottom = 259.00003
scale = Vector2(6, 6)
texture = ExtResource("7_0pu32")

[node name="Label4" type="Label" parent="TextureRect5"]
layout_mode = 0
offset_left = 10.5
offset_top = 8.999998
offset_right = 251.5
offset_bottom = 84.0
scale = Vector2(0.181137, 0.21673666)
theme_override_colors/font_color = Color(0.47200012, 0.27999997, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 48
text = "How to play?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="TextureRect5"]
layout_mode = 0
offset_left = 10.333333
offset_top = 32.166668
offset_right = 251.33333
offset_bottom = 107.16667
scale = Vector2(0.181137, 0.21673666)
theme_override_colors/font_color = Color(1, 0.19999999, 0.19999999, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 36
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="TextureRect5"]
layout_mode = 0
offset_left = 10.166667
offset_top = 22.833332
offset_right = 638.1667
offset_bottom = 79.83333
scale = Vector2(0.07196337, 0.07329941)
theme_override_colors/font_color = Color(0.44457006, 0.2263, 0.73, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 48
text = "run away from zombies and collect
keys to escape backrooms."

[node name="Label6" type="Label" parent="TextureRect5"]
layout_mode = 0
offset_left = 10.166667
offset_top = 46.0
offset_right = 674.1667
offset_bottom = 163.0
scale = Vector2(0.07196337, 0.07329941)
theme_override_colors/font_color = Color(0.56, 0.2072, 0.21307991, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("3_0pu32")
theme_override_font_sizes/font_size = 48
text = "Move around with wasd
rotate head with mouse
collect keys with left click"

[node name="Control" type="Control" parent="TextureRect5"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="TextureRect5"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 57.333336
offset_top = 0.9999975
offset_right = 65.333336
offset_bottom = 8.999997

[node name="Label" type="Label" parent="TextureRect5"]
texture_filter = 1
layout_mode = 0
offset_left = 60.0
offset_top = 1.8333308
offset_right = 148.0
offset_bottom = 220.83333
scale = Vector2(0.03, 0.022)
theme_override_font_sizes/font_size = 160
text = "x"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect2/Button" to="." method="_on_tutibutton_pressed"]
[connection signal="pressed" from="TextureRect3/Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TextureRect/Easy/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/Normal/Button" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="TextureRect/Hard/Button" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="TextureRect5/Button" to="." method="_on_exit_button_pressed"]
